--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -4,5 +4,6 @@ server {
     location / {
         root /usr/share/nginz/html;
         index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 }
