--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t milhamhidayat/multi-nginx ./nginx
   - docker build -t milhamhidayat/multi-server ./server
   - docker build -t milhamhidayat/multi-worker ./worker
-  # Log in to docker cli
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push milhamhidayat/multi-client
