--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   region: us-east-2
   app: multi-docker
   env: MultiDocker-env
-  bucker_name: elasticbeanstalk-us-east-2-533383414893
+  bucket_name: elasticbeanstalk-us-east-2-533383414893
   bucket_path: docker-multi
   on:
     branch: master
