--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,9 +1,8 @@
 server {
-    listen 3000;
+  listen 3000;
 
-    location / {
-        root /usr/share/nginz/html;
-        index index.html index.htm;
-        try_files $uri $uri/ =404;
-    }
+  location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+  }
 }
